Delete unused media folder, add alt text and text descriptions to homepage

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -23,11 +23,10 @@
     <div class="col">
       <div class="card">
         <img src="/static/images/brunch.webp" class="card-img-top"
-          alt="Los Angeles Skyscrapers" />
+          alt="A close-up view of a table with breakfast, including eggs, bread and a cheese board." />
         <div class="card-body">
           <h5 class="card-title text-center">Breakfast</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-            additional content.</p>
+          <p class="card-text">Enjoy your breakfast favourities with a French twist.</p>
           <div class="text-center">
             <a href="https://www.google.com/" class="btn btn-outline-light btn-sm stretched-link">Breakfast Menu</a>
           </div>
@@ -37,11 +36,10 @@
     <div class="col">
       <div class="card">
         <img src="/static/images/lunch.webp" class="card-img-top"
-          alt="Los Angeles Skyscrapers" />
+          alt="A waiter serving lunch appetizers." />
         <div class="card-body">
           <h5 class="card-title text-center">Lunch</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-            additional content.</p>
+          <p class="card-text">Midday delights to energize you for the rest of your day.</p>
           <div class="text-center">
             <a href="https://www.google.com/" class="btn btn-outline-light btn-sm stretched-link">Lunch Menu</a>
           </div>
@@ -52,11 +50,10 @@
     <div class="col">
       <div class="card">
         <img src="/static/images/dinner.webp" class="card-img-top"
-          alt="Los Angeles Skyscrapers" />
+          alt="A woman holding a wine glass at a dinner table in a restaurant." />
         <div class="card-body">
-          <h5 class="card-title text-center">Diner</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-            additional content.</p>
+          <h5 class="card-title text-center">Dinner</h5>
+          <p class="card-text">Linger for the evening with our fine wines and rustic family favorites.</p>
           <div class="text-center">
             <a href="#" class="btn btn-outline-light btn-sm stretched-link">Dinner Menu</a>
           </div>
