Center cover text on homepage.

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,8 +4,8 @@
 
 <!-- Hero -->
 <div class="hero-image">
-  <div class="container">
-      <div class="cover-text">
+  <div class="container cover-text">
+      <div class="cover-text-inner">
           <h1 id="logo-text">Avec Plaisir</h1>
           <h2>Welcoming you "avec plaisir"...with pleasure!
           </h2>
@@ -15,9 +15,9 @@
 </div>
 <!-- End Hero -->
 
-<div class="menus">
+<section class="menus" id="menus">
   <h1>Our Menus</h1>
-</div>
+</section>
 <div class="container">
   <div class="row row-cols-1 row-cols-md-3 g-3">
     <div class="col">
