--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                             class="nav-colors">Home</span></a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    <a class="nav-link dropdown-toggle" href="#menus" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         <span class="nav-colors">Menus</span>
                     </a>
@@ -110,7 +110,7 @@
                         <li class="ms-3"><a class="text-muted" href="mailto:bookings@avecplaisir.com"
                             aria-label="Email us at bookings@avecplaisir.com">
                             <span class="footer-logo"><i class="fa-solid fa-envelope fa-lg"></i></span></a></li>
-                        <li class="ms-3"><a class="text-muted" href="" target="_blank" rel="noopener"
+                        <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/" target="_blank" rel="noopener"
                                 aria-label="Follow us on Facebook (opens in a new tab)">
                                 <span class="footer-logo"><i class="fa-brands fa-facebook-square fa-lg"></i></span></a>
                         </li>
@@ -147,14 +147,7 @@
         });
     </script> -->
     
-    <!-- <script>
-        $(document).ready(function() {
-            var path = window.location.pathname;
-            $(".navbar-nav li a").filter(function() {
-                return this.pathname === path;
-            }).addClass("active");
-        });
-    </script> -->
+
     <script>
         $(document).ready(function() {
             var path = window.location.pathname;
