--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,14 +58,15 @@ a:hover {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    text-align: center;
-    width: 100%;
-    height: 55vh;
+
     overflow: hidden;
     background-size: cover !important;
     background: radial-gradient(circle at center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 37%, rgba(0, 0, 0, 0.65) 100%);
 }
 
+.cover-text-inner {
+    text-align: center;
+}
 h1, h2, h3, p {
     color: #efd485;
 }
