--- a/bookings/templates/bookings/bookings.html
+++ b/bookings/templates/bookings/bookings.html
@@ -21,8 +21,8 @@
 {% else %}
 <div class="container">
   <h3>Hello, guest!</h3> 
-  <p>You need to <a href="../accounts/login/">sign in</a> to make a reservation. If you don't have an account
-    yet, please <a href="../accounts/signup">sign up</a> here.</p>
+  <p>You need to <a href="{% url 'account_login' %}">sign in</a> to make a reservation. If you don't have an account
+    yet, please <a href="{% url 'account_signup' %}">sign up</a> here.</p>
   </h3>
 </div>
 
