--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                             class="nav-colors">Home</span></a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#menus" role="button" data-bs-toggle="dropdown"
+                    <a class="nav-link dropdown-toggle" href="www.placeholder.com" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         <span class="nav-colors">Menus</span>
                     </a>
