--- a/templates/base.html
+++ b/templates/base.html
@@ -97,7 +97,7 @@
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-start py-3 my-4">
             <div class="col-md-4 d-flex align-items-center">
-                <a href="#" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                <a href="{% url 'homepage' %}" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                     <span class="footer-font">Avec Plaisir</span></a>
             </div>
             <div>
