Add catch-all redirect to main urls.py file

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,9 +44,9 @@
                         <span class="nav-colors">Menus</span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Breakfast</a></li>
-                        <li><a class="dropdown-item" href="#">Lunch</a></li>
-                        <li><a class="dropdown-item" href="#">Dinner</a></li>
+                        <li><a class="dropdown-item" href="#breakfast">Breakfast</a></li>
+                        <li><a class="dropdown-item" href="#lunch">Lunch</a></li>
+                        <li><a class="dropdown-item" href="#dinner">Dinner</a></li>
                     </ul>
                 </li>
                 <li class="dropdown-item"><a class="nav-link" href="{% url 'create_reservation' %}"><span
