--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,61 +5,39 @@
 <!-- Hero -->
 <div class="hero-image">
   <div class="container cover-text">
-      <div class="cover-text-inner">
-          <h1 id="logo-text">Avec Plaisir</h1>
-          <h2>Welcoming you "avec plaisir"...with pleasure!
-          </h2>
-          <a href="{% url 'create_reservation' %}" class="btn btn-outline-light btn-sm ">Book a Table</a>
-      </div>
+    <div class="cover-text-inner">
+      <h1 id="logo-text">Avec Plaisir</h1>
+      <h2>Welcoming you "avec plaisir"!
+      </h2>
+      <a href="{% url 'create_reservation' %}" class="btn btn-outline-light btn-sm ">Book a Table</a>
+    </div>
   </div>
 </div>
 <!-- End Hero -->
-
-<section class="menus" id="menus">
-  <h1>Our Menus</h1>
-</section>
-<div class="container">
-  <div class="row row-cols-1 row-cols-md-3 g-3">
-    <div class="col">
-      <div class="card">
-        <img src="/static/images/brunch.webp" class="card-img-top"
-          alt="A close-up view of a table with breakfast, including eggs, bread and a cheese board." />
-        <div class="card-body">
-          <h5 class="card-title text-center">Breakfast</h5>
-          <p class="card-text">Enjoy your breakfast favourities with a French twist.</p>
-          <div class="text-center">
-            <a href="https://www.google.com/" class="btn btn-outline-light btn-sm stretched-link">Breakfast Menu</a>
-          </div>
-        </div>
-      </div>
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-lg-6 col-md-12 col-sm-12">
+      <h2>Avec Plaisir</h2>
+      <p>"Avec Plaisir" means "with pleasure"! We welcome you and prepare your meal with great
+        enthusiasm. We've been serving classic French dishes since 2005, using only the freshest
+        seasonal produce. The food may be old school, but our environment is lively and relaxed.
+        We've been repeatedly reviewed as one of the best restaurants in London that won't break
+        your wallet.       
+      </p>
+      <blockquote>
+        <q><h3 class="quotes" ><em>...no pretention or fanfare. The food speaks for itself!</em><br>Jay Rayner, The Observer</h3></q>
+        <q><h3 class="quotes" ><em>...a joyous trip to the French countryside in the heart of London!</em><br>Monica Galetti, The Observer</h3></q>
+      </blockquote>
+      <p><strong>Open daily from 10am - 10pm.</strong> Reservations advised. Please sign-up to the website to make
+        a reservation. We'll only ever contact you about your visit.
+      </p>
+      <a href="{% url 'create_reservation' %}" class="btn btn-outline-light btn-sm ">Book a Table</a>
+      <a href="{% url 'menus' %}" class="btn btn-outline-light btn-sm ">Menus</a>
     </div>
-    <div class="col">
-      <div class="card">
-        <img src="/static/images/lunch.webp" class="card-img-top"
-          alt="A waiter serving lunch appetizers." />
-        <div class="card-body">
-          <h5 class="card-title text-center">Lunch</h5>
-          <p class="card-text">Midday delights to energize you for the rest of your day.</p>
-          <div class="text-center">
-            <a href="https://www.google.com/" class="btn btn-outline-light btn-sm stretched-link">Lunch Menu</a>
-          </div>
-
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="/static/images/dinner.webp" class="card-img-top"
-          alt="A woman holding a wine glass at a dinner table in a restaurant." />
-        <div class="card-body">
-          <h5 class="card-title text-center">Dinner</h5>
-          <p class="card-text">Linger for the evening with our fine wines and rustic family favorites.</p>
-          <div class="text-center">
-            <a href="#" class="btn btn-outline-light btn-sm stretched-link">Dinner Menu</a>
-          </div>
-        </div>
-      </div>
+    <div class="col-lg-6 col-md-12 col-sm-12  mt-4">
+      <img src="/static/images/wine.webp" class="image-fluid rounded mx-auto d-block wine-img">
     </div>
   </div>
+</div>
 
-  {%endblock%}
+{%endblock%}
