--- a/templates/base.html
+++ b/templates/base.html
@@ -9,13 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
     </script>
+
 
     <!-- Fengyuan Chen's Datepicker -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css"
@@ -38,17 +38,8 @@
                     <a class="nav-link" aria-current="page" href="{% url 'homepage' %}"><span
                             class="nav-colors">Home</span></a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="www.placeholder.com" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        <span class="nav-colors">Menus</span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#breakfast">Breakfast</a></li>
-                        <li><a class="dropdown-item" href="#lunch">Lunch</a></li>
-                        <li><a class="dropdown-item" href="#dinner">Dinner</a></li>
-                    </ul>
-                </li>
+                <li class="dropdown-item"><a class="nav-link" href="{% url 'menus' %}"><span
+                    class="nav-colors">Menus</span></a>
                 <li class="dropdown-item"><a class="nav-link" href="{% url 'create_reservation' %}"><span
                             class="nav-colors">Book a Table</span></a>
                 </li>
@@ -65,7 +56,7 @@
                 {% endif %}
                 {% if user.is_staff %}
                 <li class="dropdown-item"><a class="nav-link" href="{% url 'admin:index' %}"><span
-                    class="nav-colors">Staff</span></a></li>
+                            class="nav-colors">Staff</span></a></li>
                 {% endif %}
             </ul>
         </div>
@@ -109,13 +100,13 @@
                                     W1</span></a></span></li>
                     <li class="ms-3">
                         <span class="footer-logo"><i class="fas fa-phone"></i> 0207 123 4567 </span></li>
-                    
+
                     <div class="d-flex flex-wrap justify-content-end w-100">
                         <li class="ms-3"><a class="text-muted" href="mailto:bookings@avecplaisir.com"
-                            aria-label="Email us at bookings@avecplaisir.com">
-                            <span class="footer-logo"><i class="fa-solid fa-envelope fa-lg"></i></span></a></li>
-                        <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/" target="_blank" rel="noopener"
-                                aria-label="Follow us on Facebook (opens in a new tab)">
+                                aria-label="Email us at bookings@avecplaisir.com">
+                                <span class="footer-logo"><i class="fa-solid fa-envelope fa-lg"></i></span></a></li>
+                        <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/" target="_blank"
+                                rel="noopener" aria-label="Follow us on Facebook (opens in a new tab)">
                                 <span class="footer-logo"><i class="fa-brands fa-facebook-square fa-lg"></i></span></a>
                         </li>
                         <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/" target="_blank"
@@ -132,23 +123,26 @@
         </footer>
     </div>
 
+    <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/ad363e4e3e.js" crossorigin="anonymous"></script>
+    <!-- script for datepicker -->
     <script>
         $(function () {
-          $("#id_reservation_date").datepicker();
+            $("#id_reservation_date").datepicker();
         });
-      </script>
+    </script>
+
+    <!-- script for active class -->
 
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             var path = window.location.pathname;
-            $(".navbar-nav li a").removeClass("active").filter(function() {
+            $(".navbar-nav li a").removeClass("active").filter(function () {
                 return this.pathname === path;
             }).addClass("active");
         });
     </script>
-    
-    
+
 
 </body>
 
