Add menus app, urls, views and templates

--- a/menus/templates/menus/menus.html
+++ b/menus/templates/menus/menus.html
@@ -16,7 +16,7 @@
           <h5 class="card-title text-center">Breakfast</h5>
           <p class="card-text">Enjoy your breakfast favourities with a French twist.</p>
           <div class="text-center">
-            <a href="https://www.google.com/" class="btn btn-outline-light btn-sm stretched-link">Breakfast Menu</a>
+            <a href="{% url 'breakfast' %}" class="btn btn-outline-light btn-sm stretched-link">Breakfast Menu</a>
           </div>
         </div>
       </div>
@@ -29,7 +29,7 @@
           <h5 class="card-title text-center">Lunch</h5>
           <p class="card-text">Midday delights to energize you for the rest of your day.</p>
           <div class="text-center">
-            <a href="https://www.google.com/" class="btn btn-outline-light btn-sm stretched-link">Lunch Menu</a>
+            <a href="{% url 'lunch' %}" class="btn btn-outline-light btn-sm stretched-link">Lunch Menu</a>
           </div>
 
         </div>
@@ -43,7 +43,7 @@
           <h5 class="card-title text-center">Dinner</h5>
           <p class="card-text">Linger for the evening with our fine wines and rustic family favorites.</p>
           <div class="text-center">
-            <a href="#" class="btn btn-outline-light btn-sm stretched-link">Dinner Menu</a>
+            <a href="{% url 'dinner' %}" class="btn btn-outline-light btn-sm stretched-link">Dinner Menu</a>
           </div>
         </div>
       </div>
