Add hours to bookings model, fix errors on bookings templates

--- a/menus/templates/menus/breakfast.html
+++ b/menus/templates/menus/breakfast.html
@@ -6,6 +6,8 @@
     <div class="row d-flex justify-content-center">
       <div class="col-10 pb-5 text-center">
         <h1 class="quicksand-font header text-uppercase">Morning Glories!</h1>
+        <p class="text-center">Served from 10:00 - 12:00 daily.<br>
+        Remember to check out our <a href="{% url 'lunch' %}">lunch</a> and <a href="{% url 'dinner' %}">dinner</a> menus.</p>
         <hr>
       </div>
     </div>
@@ -17,8 +19,9 @@
           Choose between chocolate sauce, Canadian maple syrup or Greek yogurt.<br>
           £10.95 </p>
         <h4>Crepes</h4>
-        <p>look at our crepes of the day board with savoury and sweet options <br>
-          £8.95 </p>
+        <p>Check out our board for the savoury and sweet options of the day, or choose your favorite
+          fillings.<br>
+          £5.00 - £15.50 </p>
         <h4>Viennoiseries</h4>
         <p>All of our pastries are served with jams and spreads. Choose from croissant,
           almond croissant, pain au chocolat, pain au raisin and cinnamon swirl. <br>
@@ -32,22 +35,22 @@
         <p>Scottish rolled oats with an apple and pear compote, dried fruits and nuts.<br>
           £7.95 </p>
         <h4>Muesli</h4>
-        <p>served with Greek yogurt, apple and pear compote and seasonal fruits <br>
+        <p>Served with Greek yogurt, apple and pear compote and seasonal fruits <br>
           £7.95 </p>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-10 pb-5 text-center">
-        <h2 class="text-center quicksand-font text-uppercase">Tartines!</h4>
+        <h2 class="text-center quicksand-font text-uppercase">Tartines</h4>
           <p>Served on sourdough bread</p><br>
         <h4>Smoked Salmon</h4>
-        <p>with butter, pickled cucumber, radishes and dill dressing.<br>
+        <p>Served with butter, pickled cucumber, radishes and dill dressing.<br>
           £12.95 </p>
         <h4>Butternut squash, hummus and blue cheese</h4>
-        <p>served with baby gem, walnuts, caramelized red onions and baked apples. <br>
+        <p>Served with baby gem, walnuts, caramelized red onions and baked apples. <br>
           £12.95 </p>
         <h4>Croque Monsieur</h4>
-        <p>with ham and cheese, served with a green salad. <br>
+        <p>Served with ham and cheese, served with a green salad. <br>
           £7.95 </p>
       </div>
     </div>
@@ -56,13 +59,13 @@
         <h2 class="text-center quicksand-font text-uppercase">Organic Eggs</h4>
           <p>Served on sourdough bread</p><br>
         <h4>Soft-boiled with toast</h4>
-        <p>choice of breads.<br>
+        <p>Choice of breads.<br>
           £3.99 </p>
         <h4>Scrambled</h4>
-        <p>served with toast or your choice of avocado, bacon, ham or smoked salmon. <br>
+        <p>Served with toast or your choice of avocado, bacon, ham or smoked salmon. <br>
           £12.95 </p>
         <h4>Shakshuka</h4>
-        <p>poached eggs in a tomato sauce, with peppers and feta cheese and parsley, and
+        <p>Poached eggs in a tomato sauce, with peppers and feta cheese and parsley, and
           served with bread. <br>
           £7.95 </p>
       </div>
