--- a/menus/templates/menus/dinner.html
+++ b/menus/templates/menus/dinner.html
@@ -6,6 +6,8 @@
     <div class="row d-flex justify-content-center">
       <div class="col-10 pb-5 text-center">
         <h1 class="quicksand-font header text-uppercase">Dinner</h1>
+        <p class="text-center">Served from 18:00 - 23:00 daily.<br>
+          Remember to check out our <a href="{% url 'breakfast' %}">breakfast</a> and <a href="{% url 'lunch' %}">lunch</a> menus.</p>
         <hr>
       </div>
     </div>
@@ -50,8 +52,9 @@
         <h4>Cheese Soufflé</h4>
           <p>This twice-baked souffle is served with mushrooms, cream and a side salad.<br>
         £17.50</p><br>
-        <h4>Ragout of Artichoke Hearts</h4>
-        <p>£15.95 </p>
+        <h4>Provençal Artichoke Ragout</h4>
+        <p>A hearty stew with peppers chickpeas, garlic and olives served over couscouse. <br>
+          £15.95 </p>
         <h4>Vegetarian Bourgignon</h4>
         <p>This vegetarian twist on the French classic is celebrates carrots,
             green been and mushrooms. <br>
@@ -67,13 +70,13 @@
           <h2 class="text-center quicksand-font text-uppercase">Choucroute</h4>
             <p>Served with your choice of bread</p><br>
           <h4>Alsacienne</h4>
-          <p>with cured, smoked belly of pork and franfurter <br>
+          <p>Served with cured, smoked belly of pork and franfurter <br>
             £12.95</p>
           <h4>Alsacienne "Plaisir"</h4>
-          <p>the Alsacienne with ham hock and garlic sausage <br>
+          <p>The Alsacienne with ham hock and garlic sausage <br>
             £12.95</p>
           <h4>Royale</h4>
-          <p>the Alsacienne with Morteau sausage and pork chop <br>
+          <p>The Alsacienne with Morteau sausage and pork chop <br>
             £7.95 </p>
         </div>
       </div>
