--- a/menus/templates/menus/lunch.html
+++ b/menus/templates/menus/lunch.html
@@ -6,6 +6,8 @@
     <div class="row d-flex justify-content-center">
       <div class="col-10 pb-5 text-center">
         <h1 class="quicksand-font header text-uppercase">Lunch</h1>
+        <p class="text-center">Served from 12:00 - 16:00 daily.<br>
+          Remember to check out our <a href="{% url 'breakfast' %}">breakfast</a> and <a href="{% url 'dinner' %}">dinner</a> menus.</p>
         <hr>
       </div>
     </div>
@@ -20,12 +22,13 @@
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-10 pb-5 text-center">
-        <h2 class="text-center quicksand-font text-uppercase">Soups</h4><br>
-        <h4>Creamed Cauliflower</h4>
+        <h2 class="text-center quicksand-font text-uppercase">Soups</h4>
+          <p>Serverd with a side salad and selection of breads.</p><br>
+        <h4>Creamed Cauliflower Soup</h4>
         <p>£7.95</p>
-        <h4>Leek & Potato</h4>
+        <h4>Leek & Potato Soup</h4>
         <p>£7.95</p>
-        <h4>French Onion</h4>
+        <h4>French Onion Soup</h4>
         <p>£9.50 </p>
       </div>
     </div>
