--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -35,7 +35,7 @@
       <a href="{% url 'menus' %}" class="btn btn-outline-light btn-sm ">Menus</a>
     </div>
     <div class="col-lg-6 col-md-12 col-sm-12  mt-4">
-      <img src="/static/images/wine.webp" class="image-fluid rounded mx-auto d-block wine-img">
+      <img src="{% static 'images/wine.webp %}" alt="A photo of a wooden, criss-cross wine rack full of bottles." class="image-fluid rounded mx-auto d-block wine-img">
     </div>
   </div>
 </div>
