Add cloudinary url paths to templates

--- a/menus/templates/menus/menus.html
+++ b/menus/templates/menus/menus.html
@@ -18,7 +18,7 @@
   <div class="row row-cols-1 row-cols-md-3 g-3">
     <div class="col">
       <div class="card">
-        <img src="/static/images/brunch.webp" class="card-img-top"
+        <img src="https://res.cloudinary.com/ds4ukszsx/image/upload/v1674482088/static/images/brunch.b24424350291.webp" class="card-img-top"
           alt="A close-up view of a table with breakfast, including eggs, bread and a cheese board." />
         <div class="card-body">
           <h5 class="card-title text-center">Breakfast</h5>
@@ -31,7 +31,7 @@
     </div>
     <div class="col">
       <div class="card">
-        <img src="/static/images/lunch.webp" class="card-img-top"
+        <img src="https://res.cloudinary.com/ds4ukszsx/image/upload/v1674482088/static/images/lunch.7af9ff3320ec.webp" class="card-img-top"
           alt="A waiter serving lunch appetizers." />
         <div class="card-body">
           <h5 class="card-title text-center">Lunch</h5>
@@ -45,7 +45,7 @@
     </div>
     <div class="col">
       <div class="card">
-        <img src="/static/images/dinner.webp" class="card-img-top"
+        <img src="https://res.cloudinary.com/ds4ukszsx/image/upload/v1674482089/static/images/dinner.219fa9d437e9.webp" class="card-img-top"
           alt="A woman holding a wine glass at a dinner table in a restaurant." />
         <div class="card-body">
           <h5 class="card-title text-center">Dinner</h5>
