Add userpassestestmixins to edit and delete views, add 404 page

--- a/bookings/templates/bookings/delete_reservation.html
+++ b/bookings/templates/bookings/delete_reservation.html
@@ -9,7 +9,7 @@
         {% csrf_token %}
         <p>Are you sure you want to delete 
             your reservation on "{{ reservation.reservation_date }}"?</p>    
-        <input type="submit" value="Confirm">
+        <input type="submit" class="btn button-style" value="Confirm">
     </form>
 </div>
 
