Update urls.py to remove catchall rediredirect

--- a/templates/403.html
+++ b/templates/403.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 <div class="d-flex flex-column align-items-center">
-    <h1>Page Not Found</h1>
-    <p>404 Error: The page you have requested cannot be found!</p>
+    <h1>Unauthorized Access</h1>
+    <p>403 Error: You don't have access to this resource!</p>
 
     <a href="{% url 'homepage' %}" class="btn button-style">Home</a>
 </div>
