--- a/templates/500.html
+++ b/templates/500.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 <div class="d-flex flex-column align-items-center">
-    <h1>Page Not Found</h1>
-    <p>404 Error: The page you have requested cannot be found!</p>
+    <h1>Internal Error</h1>
+    <p>500 Error</p>
 
     <a href="{% url 'homepage' %}" class="btn button-style">Home</a>
 </div>
