--- a/templates/base.html
+++ b/templates/base.html
@@ -100,8 +100,7 @@
                                 <span class="footer-logo"><i class="fas fa-map-pin"></i> Charlotte Street, London,
                                     W1</span></a></span></li>
                     <li class="ms-3">
-                        <span class="footer-logo"><i class="fas fa-phone"></i> 0207 123 4567 </span></li>
-
+                        <a href="tel:020 7123 4567"><span class="footer-logo"><i class="fas fa-phone"></i> 0207 123 4567 </span></a></li>
                     <div class="d-flex flex-wrap justify-content-end w-100">
                         <li class="ms-3"><a class="text-muted" href="mailto:bookings@avecplaisir.com"
                                 aria-label="Email us at bookings@avecplaisir.com">
