--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,11 +20,12 @@ a:hover {
 .navbar {
     z-index: 10;
     color: #efd485;
-    padding: 0;
+    padding: 20px;
 }
 
 .nav-link {
     color: #efd485;
+    padding: 20px;
 }
 
 #logo {
