Edit/add text to menus.html and bookings.html.

--- a/menus/templates/menus/menus.html
+++ b/menus/templates/menus/menus.html
@@ -7,13 +7,13 @@
   <h1>Our Menus</h1>
 </section>
 <div class="container">
-  <div class= "mx-auto d-block w-75">
+  <!-- <div class= "mx-auto d-block w-75">
     <p class="justify-content-center">Our menus are ever changing because we strive to offer you the 
       best of what the season and the local markets have to offer. Our food is organic and sustainabily
       sourced. We post our daily "plats" via social media, so be sure to follow us. You'll find our wine
       list changes to suit our menu. Follow us for tasting notes from our sommelier and to learn more 
       about our vinters.</p>
-  </div>
+  </div> -->
   
   <div class="row row-cols-1 row-cols-md-3 g-3">
     <div class="col">
@@ -35,7 +35,7 @@
           alt="A waiter serving lunch appetizers." />
         <div class="card-body">
           <h5 class="card-title text-center">Lunch</h5>
-          <p class="card-text">Midday delights to energize you for the rest of your day.</p>
+          <p class="card-text">Enjoy our plat du jour, soups, salads or specialty "choucroute."</p>
           <div class="text-center">
             <a href="{% url 'lunch' %}" class="btn btn-outline-light btn-sm stretched-link">Lunch Menu</a>
           </div>
