--- a/bookings/templates/bookings/bookings.html
+++ b/bookings/templates/bookings/bookings.html
@@ -9,7 +9,10 @@
 <div class="container"> 
   <h1>Reservations</h1>
   <h3>We look forward to serving you, {{ user.first_name }}!</h3>
-  
+  <p>Please <a href="tel:020 7123 4567">call</a>
+    or <a href="mailto:bookings@avecplaisir.com"
+    aria-label="Email us at bookings@avecplaisir.com">email</a> 
+    the restaurant for parties of more than 8 guests.</p>
   <form method="POST" autocomplete="off">
     {{ form | crispy}}
     {% csrf_token %}
