--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="icon" type="image/png" href= "{% static 'images/favicon.png' %}">
+    <link rel="icon" type="image/png" href="{% static 'images/favicon.png' %}">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
@@ -38,7 +38,7 @@
                             class="nav-colors">Home</span></a>
                 </li>
                 <li class="dropdown-item"><a class="nav-link" href="{% url 'menus' %}"><span
-                    class="nav-colors">Menus</span></a>
+                            class="nav-colors">Menus</span></a>
                 <li class="dropdown-item"><a class="nav-link" href="{% url 'create_reservation' %}"><span
                             class="nav-colors">Book a Table</span></a>
                 </li>
@@ -84,42 +84,37 @@
 
     </main>
 
-    <div class="container">
-        <footer class="d-flex flex-wrap justify-content-between align-items-start py-3 my-4">
-            <div class="col-md-4 d-flex align-items-center">
-                <a href="{% url 'homepage' %}" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                    <span class="footer-font">Avec Plaisir</span></a>
-            </div>
-            <div>
-                <ul class="nav col-md-auto justify-content-end list-unstyled">
-                    <li class="ms-3">
-                        <span><a class="text-muted" href="https://goo.gl/maps/WZmoB6TjqAw6aZYA8" target="_blank"
-                                rel="noopener" aria-label="Find us on Google maps (opens in a new tab)">
-                                <span class="footer-logo"><i class="fas fa-map-pin"></i> Charlotte Street, London,
-                                    W1</span></a></span></li>
-                    <li class="ms-3">
-                        <a href="tel:020 7123 4567"><span class="footer-logo"><i class="fas fa-phone"></i> 0207 123 4567 </span></a></li>
-                    <div class="d-flex flex-wrap justify-content-end w-100">
-                        <li class="ms-3"><a class="text-muted" href="mailto:bookings@avecplaisir.com"
-                                aria-label="Email us at bookings@avecplaisir.com">
-                                <span class="footer-logo"><i class="fa-solid fa-envelope fa-lg"></i></span></a></li>
-                        <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/" target="_blank"
-                                rel="noopener" aria-label="Follow us on Facebook (opens in a new tab)">
-                                <span class="footer-logo"><i class="fa-brands fa-facebook-square fa-lg"></i></span></a>
-                        </li>
-                        <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/" target="_blank"
-                                rel="noopener" aria-label="Follow us on Instagram (opens in a new tab)">
-                                <span class="footer-logo"><i class="fa-brands fa-instagram-square fa-lg"></i></span></a>
-                        </li>
-                        <li class="ms-3"><a class="text-muted" href="https://www.twitter.com/" target="_blank"
-                                rel="noopener" aria-label="Follow us on Twitter (opens in a new tab)">
-                                <span class="footer-logo"><i class="fa-brands fa-twitter-square fa-lg"></i></span></a>
-                        </li>
-                </ul>
-            </div>
+    <footer style="background-color: rgba(0, 0, 0, 0.2); min-height:150px;">
+        <div class="container p-4 pb-0 text-center">
+          <a href="{% url 'homepage' %}">
+            <span class="footer-font">Avec Plaisir</span>
+          </a>
+        </div>
+        <section class="mb-4 d-flex flex-wrap justify-content-center">
+          <a class="m-1 d-block" href="https://goo.gl/maps/WZmoB6TjqAw6aZYA8" target="_blank" rel="noopener"
+              aria-label="Find us on Google maps (opens in a new tab)">
+              <span class="footer-logo mr-2"><i class="fas fa-map-pin"></i> Charlotte Street, London, W1</a>
+          <a class="m-1 d-block" href="tel:020 7123 4567">
+              <span class="footer-logo mr-2"><i class="fas fa-phone"></i> 0207 123 4567</span></a>
+          <div class="d-flex justify-content-center">
+            <a class="m-1" href="mailto:bookings@avecplaisir.com" aria-label="Email us at bookings@avecplaisir.com">
+                <span class="footer-logo mr-2"><i class="fa-solid fa-envelope fa-lg"></i></span></a>
+            <a class="m-1" href="https://www.facebook.com/" target="_blank" rel="noopener"
+                aria-label="Follow us on Facebook (opens in a new tab)">
+                <span class="footer-logo mr-2"><i class="fa-brands fa-facebook-square fa-lg"></i></span></a>
+            <a class="m-1" href="https://www.instagram.com/" target="_blank" rel="noopener"
+                aria-label="Follow us on Instagram (opens in a new tab)">
+                <span class="footer-logo mr-2"><i class="fa-brands fa-instagram-square fa-lg"></i></span></a>
+            <a class="m-1" href="https://www.twitter.com/" target="_blank" rel="noopener"
+                aria-label="Follow us on Twitter (opens in a new tab)">
+                <span class="footer-logo mr-2"><i class="fa-brands fa-twitter-square fa-lg"></i></span></a>
+          </div>
+        </section>
+      </footer>
+      
+      
+      
 
-        </footer>
-    </div>
 
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/ad363e4e3e.js" crossorigin="anonymous"></script>
