Add aria lables to base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
 
     <footer style="background-color: rgba(0, 0, 0, 0.2); min-height:150px;">
         <div class="container p-4 pb-0 text-center">
-          <a href="{% url 'homepage' %}">
+          <a href="{% url 'homepage' %}" aria-label="Return to homepage">
             <span class="footer-font">Avec Plaisir</span>
           </a>
         </div>
@@ -94,18 +94,18 @@
           <a class="m-1 d-block" href="https://goo.gl/maps/WZmoB6TjqAw6aZYA8" target="_blank" rel="noopener"
               aria-label="Find us on Google maps (opens in a new tab)">
               <span class="footer-logo mr-2"><i class="fas fa-map-pin"></i> Charlotte Street, London, W1</a>
-          <a class="m-1 d-block" href="tel:020 7123 4567">
+          <a class="m-1 d-block" href="tel:020 7123 4567" aria-label="Call us on 020 7123 4567" >
               <span class="footer-logo mr-2"><i class="fas fa-phone"></i> 0207 123 4567</span></a>
           <div class="d-flex justify-content-center">
             <a class="m-1" href="mailto:bookings@avecplaisir.com" aria-label="Email us at bookings@avecplaisir.com">
                 <span class="footer-logo mr-2"><i class="fa-solid fa-envelope fa-lg"></i></span></a>
-            <a class="m-1" href="https://www.facebook.com/" target="_blank" rel="noopener"
+            <a class="m-1" href="https://www.facebook.com/" aria-label="Contact us on Facebook" target="_blank" rel="noopener"
                 aria-label="Follow us on Facebook (opens in a new tab)">
                 <span class="footer-logo mr-2"><i class="fa-brands fa-facebook-square fa-lg"></i></span></a>
-            <a class="m-1" href="https://www.instagram.com/" target="_blank" rel="noopener"
+            <a class="m-1" href="https://www.instagram.com/" aria-label="Contact us on Instagram" target="_blank" rel="noopener"
                 aria-label="Follow us on Instagram (opens in a new tab)">
                 <span class="footer-logo mr-2"><i class="fa-brands fa-instagram-square fa-lg"></i></span></a>
-            <a class="m-1" href="https://www.twitter.com/" target="_blank" rel="noopener"
+            <a class="m-1" href="https://www.twitter.com/" aria-label="Contact us on Twitter" target="_blank" rel="noopener"
                 aria-label="Follow us on Twitter (opens in a new tab)">
                 <span class="footer-logo mr-2"><i class="fa-brands fa-twitter-square fa-lg"></i></span></a>
           </div>
