--- a/static/css/style.css
+++ b/static/css/style.css
@@ -70,7 +70,7 @@ a:hover {
 .cover-text-inner {
     text-align: center;
 }
-h1, h2, h3, h4, p  {
+h1, h2, h3, h4, p, q  {
     color: #efd485;
 }
 
