--- a/templates/base.html
+++ b/templates/base.html
@@ -91,13 +91,15 @@
           </a>
         </div>
         <section class="mb-4 d-flex flex-wrap justify-content-center">
-          <a class="m-1 d-block" href="https://goo.gl/maps/WZmoB6TjqAw6aZYA8" target="_blank" rel="noopener"
-              aria-label="Find us on Google maps (opens in a new tab)">
+          <a class="m-1 d-block" href="https://goo.gl/maps/WZmoB6TjqAw6aZYA8"
+          target="_blank" rel="noopener" aria-label="Find us on Google maps (opens in a new tab)">
               <span class="footer-logo mr-2"><i class="fas fa-map-pin"></i> Charlotte Street, London, W1</a>
-          <a class="m-1 d-block" href="tel:020 7123 4567" aria-label="Call us on 020 7123 4567" >
+          <a class="m-1 d-block" href="tel:020 7123 4567" target="_blank" rel="noopener"
+            aria-label="Call us on 020 7123 4567" >
               <span class="footer-logo mr-2"><i class="fas fa-phone"></i> 0207 123 4567</span></a>
           <div class="d-flex justify-content-center">
-            <a class="m-1" href="mailto:bookings@avecplaisir.com" aria-label="Email us at bookings@avecplaisir.com">
+            <a class="m-1" href="mailto:bookings@avecplaisir.com" target="_blank" rel="noopener"
+            aria-label="Email us at bookings@avecplaisir.com">
                 <span class="footer-logo mr-2"><i class="fa-solid fa-envelope fa-lg"></i></span></a>
             <a class="m-1" href="https://www.facebook.com/" aria-label="Contact us on Facebook" target="_blank" rel="noopener"
                 aria-label="Follow us on Facebook (opens in a new tab)">
