Edit menus text

--- a/menus/templates/menus/menus.html
+++ b/menus/templates/menus/menus.html
@@ -14,7 +14,7 @@
           alt="A close-up view of a table with breakfast, including eggs, bread and a cheese board." />
         <div class="card-body">
           <h5 class="card-title text-center">Breakfast</h5>
-          <p class="card-text">Enjoy your breakfast favourities with a French twist.</p>
+          <p class="card-text">Enjoy your breakfast favourites with a French twist.</p>
           <div class="text-center">
             <a href="{% url 'breakfast' %}" class="btn btn-outline-light btn-sm stretched-link">Breakfast Menu</a>
           </div>
@@ -27,7 +27,7 @@
           alt="A waiter serving lunch appetizers." />
         <div class="card-body">
           <h5 class="card-title text-center">Lunch</h5>
-          <p class="card-text">Enjoy our plat du jour, soups, salads or specialty "choucroute."</p>
+          <p class="card-text">Choose from our plat du jour, soups, salads or specialty "choucroute."</p>
           <div class="text-center">
             <a href="{% url 'lunch' %}" class="btn btn-outline-light btn-sm stretched-link">Lunch Menu</a>
           </div>
@@ -41,7 +41,7 @@
           alt="A woman holding a wine glass at a dinner table in a restaurant." />
         <div class="card-body">
           <h5 class="card-title text-center">Dinner</h5>
-          <p class="card-text">Linger for the evening with our fine wines and rustic family favorites.</p>
+          <p class="card-text">Linger over our fine wines, gourmet dishs and rustic family favorites.</p>
           <div class="text-center">
             <a href="{% url 'dinner' %}" class="btn btn-outline-light btn-sm stretched-link">Dinner Menu</a>
           </div>
