Add top margin to footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
 
 <body>
     <!-- Nav Bar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent px-4">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent ps-4">
         <a class="navbar-brand" href="{% url 'homepage' %}"><span id="logo">A</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -84,7 +84,7 @@
 
     </main>
 
-    <footer style="background-color: rgba(0, 0, 0, 0.2); min-height:150px;">
+    <footer class="mt-4" style="background-color: rgba(0, 0, 0, 0.2); min-height:150px;">
         <div class="container p-4 pb-0 text-center">
           <a href="{% url 'homepage' %}" aria-label="Return to homepage">
             <span class="footer-font">Avec Plaisir</span>
