--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,7 +12,7 @@ body {
 
 a {
     text-decoration: none;
-    color:white;
+    color:#efd485;
 }
 
 a:hover {
@@ -22,7 +22,6 @@ a:hover {
 .navbar {
     z-index: 10;
     color: #efd485;
-    padding: 20px;
 }
 
 .nav-link {
